{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 206,
  "lineage": "4a5372d0-a70a-13ac-cc10-f61597412610",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "photogallery",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a695f0d95cefc163",
            "arn": "arn:aws:ec2:us-east-2:180754514844:instance/i-0135874e11f52e283",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-mybucket-role",
            "id": "i-0135874e11f52e283",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bacc096571b73f83",
            "private_dns": "ip-172-31-1-104.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.104",
            "public_dns": "ec2-3-140-198-153.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.198.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06404801787734045",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "photogallery-sg2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d461f5ac85aff7d",
            "tags": {
              "Name": "photogallery"
            },
            "tags_all": {
              "Name": "photogallery"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-061433328f40b5ebe"
            ]
          },
          "dependencies": [
            "aws_db_instance.photogallery",
            "aws_iam_instance_profile.s3-mybucket-role-instanceprofile",
            "aws_key_pair.mykeypair",
            "aws_security_group.allow-mysql",
            "aws_security_group.photogallery",
            "data.template_file.user_data",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:180754514844:security-group/sg-079126f65c89121ea",
            "description": "allow-mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-079126f65c89121ea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-061433328f40b5ebe"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow-mysql2",
            "name_prefix": "",
            "owner_id": "180754514844",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-mysql"
            },
            "tags_all": {
              "Name": "allow-mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-001989551e6d4df56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.photogallery"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "photogallery",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:180754514844:security-group/sg-061433328f40b5ebe",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061433328f40b5ebe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "photogallery-sg2",
            "name_prefix": "",
            "owner_id": "180754514844",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "photogallery"
            },
            "tags_all": {
              "Name": "photogallery"
            },
            "timeouts": null,
            "vpc_id": "vpc-001989551e6d4df56"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}